--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,11 +1,11 @@
 name: deploy-container
 
-on:
+on: 
   push:
     branches:
       - master
     paths:
-      - "packages/container/**"
+      - 'packages/container/**'
 
 defaults:
   run:
@@ -16,13 +16,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - uses: actions/checkout@v2
+
+      # Step 2: Install dependencies
       - run: npm install
+
+      # Step 3: Build the project
       - run: npm run build
 
+      # Step 4: Sync files to S3
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
-          env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_DEFAULT_REGION: us-east-1
+        with:
+          args: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+        env: 
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+
+      # Step 5: Create a CloudFront invalidation
+      - uses: shinyinc/action-aws-cli@v1.2
+        with:
+          args: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+        env: 
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
